# veet-code

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  veet
.claude/: problem-examples.md
.claude/commands/: explain.md  generate.md  hint.md  veet-add-tests.md  veet-explain.md  veet-generate.md  veet-hint.md
problems/easy/palindrome-checker/: solution.py  tests.py
problems/easy/two-sum/: solution.py  tests.py
problems/hard/lru-cache/: solution.py  tests.py
problems/hard/rate-limiter/: solution.py  tests.py
problems/hard/shortest-path/: solution.py  tests.py
problems/hard/task-scheduler/: solution.py  tests.py
problems/medium/group-anagrams/: solution.py  tests.py
problems/medium/group-transactions/: solution.py  tests.py
problems/medium/merge-intervals/: solution.py  tests.py
problems/medium/valid-parentheses/: solution.py  tests.py
problems/medium/word-frequency/: solution.py  tests.py
veetcode/: app.py  cli.py  veetcode.tcss
