[project]
name = "veetcode"
version = "0.1.0"
description = "Terminal-based LeetCode practice with auto-testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytermgui>=7.7.0",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
]

[project.scripts]
veetcode = "veetcode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]
